--- a/app/templates/news_index.html
+++ b/app/templates/news_index.html
@@ -16,7 +16,7 @@
 <body>
   <header>
     <h1>🗳️ Election Data News</h1>
-    <a href="/" style="margin-left:auto;">← Back to site</a>
+    <a href="/" style="margin-left:auto;">← Back to Home</a>
   </header>
 
   <form method="get">
